--- a/DormitoryForDelivery/DormitoryForDelivery/Base.lproj/Main.storyboard
+++ b/DormitoryForDelivery/DormitoryForDelivery/Base.lproj/Main.storyboard
@@ -285,18 +285,18 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="ID" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ig3-Gt-HEK">
-                                <rect key="frame" x="80" y="348" width="254" height="34"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="ID" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ig3-Gt-HEK">
+                                <rect key="frame" x="80" y="347" width="254" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hat-Vu-gwb">
-                                <rect key="frame" x="80" y="413" width="254" height="34"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hat-Vu-gwb">
+                                <rect key="frame" x="80" y="406" width="254" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Smo-yC-z0c">
-                                <rect key="frame" x="107" y="492" width="200" height="35"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Smo-yC-z0c">
+                                <rect key="frame" x="107" y="490" width="200" height="50"/>
                                 <color key="backgroundColor" name="AccentColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="2kO-am-leF"/>
@@ -306,30 +306,39 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="muW-2Z-DmQ">
-                                <rect key="frame" x="107" y="582" width="52" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="회원가입">
-                                    <color key="titleColor" red="0.57414853570000002" green="0.57416242360000003" blue="0.57415497299999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V2S-2B-UkZ">
-                                <rect key="frame" x="219" y="582" width="101" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="ID/비밀번호 찾기">
-                                    <color key="titleColor" red="0.66422420739999999" green="0.66424006219999998" blue="0.66423153879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
-                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" spacing="60" translatesAutoresizingMaskIntoConstraints="NO" id="es2-L8-EUV">
+                                <rect key="frame" x="100" y="580" width="219" height="30"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="muW-2Z-DmQ">
+                                        <rect key="frame" x="0.0" y="0.0" width="58" height="30"/>
+                                        <state key="normal" title="회원가입">
+                                            <color key="titleColor" red="0.57414853570000002" green="0.57416242360000003" blue="0.57415497299999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V2S-2B-UkZ">
+                                        <rect key="frame" x="118" y="0.0" width="101" height="30"/>
+                                        <state key="normal" title="ID/비밀번호 찾기">
+                                            <color key="titleColor" red="0.66422420739999999" green="0.66424006219999998" blue="0.66423153879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="hiy-ho-d2t"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="Smo-yC-z0c" firstAttribute="centerX" secondItem="7oN-uj-wBT" secondAttribute="centerX" id="0eU-Zl-IgD"/>
+                            <constraint firstItem="Hat-Vu-gwb" firstAttribute="top" secondItem="ig3-Gt-HEK" secondAttribute="bottom" constant="25" id="24T-Pb-fdt"/>
                             <constraint firstItem="Hat-Vu-gwb" firstAttribute="leading" secondItem="hiy-ho-d2t" secondAttribute="leading" constant="80" id="2ng-76-VvS"/>
+                            <constraint firstItem="ig3-Gt-HEK" firstAttribute="top" secondItem="Zdm-K8-kmB" secondAttribute="bottom" constant="35" id="3kk-Nd-dwf"/>
+                            <constraint firstItem="es2-L8-EUV" firstAttribute="leading" secondItem="hiy-ho-d2t" secondAttribute="leading" constant="100" id="8FW-pD-u5w"/>
+                            <constraint firstItem="hiy-ho-d2t" firstAttribute="trailing" secondItem="es2-L8-EUV" secondAttribute="trailing" constant="100" id="D4w-Rl-5PP"/>
                             <constraint firstItem="ig3-Gt-HEK" firstAttribute="leading" secondItem="hiy-ho-d2t" secondAttribute="leading" constant="80" id="G4o-LY-42N"/>
                             <constraint firstItem="hiy-ho-d2t" firstAttribute="trailing" secondItem="ig3-Gt-HEK" secondAttribute="trailing" constant="80" id="Kyq-Gc-MLN"/>
                             <constraint firstItem="hiy-ho-d2t" firstAttribute="trailing" secondItem="Hat-Vu-gwb" secondAttribute="trailing" constant="80" id="Mtn-bs-d9W"/>
                             <constraint firstItem="Zdm-K8-kmB" firstAttribute="centerX" secondItem="7oN-uj-wBT" secondAttribute="centerX" id="ask-cF-EWl"/>
+                            <constraint firstItem="hiy-ho-d2t" firstAttribute="trailing" secondItem="es2-L8-EUV" secondAttribute="trailing" constant="95" id="b1D-gc-jaT"/>
+                            <constraint firstItem="Smo-yC-z0c" firstAttribute="top" secondItem="Hat-Vu-gwb" secondAttribute="bottom" constant="50" id="etC-uh-qu1"/>
                             <constraint firstItem="hiy-ho-d2t" firstAttribute="bottom" secondItem="Zdm-K8-kmB" secondAttribute="bottom" constant="550" id="gX7-4F-Lic"/>
                             <constraint firstItem="Zdm-K8-kmB" firstAttribute="top" secondItem="hiy-ho-d2t" secondAttribute="top" constant="150" id="gfF-kQ-A7i"/>
                         </constraints>
