--- a/DormitoryForDelivery/DormitoryForDelivery/Base.lproj/Main.storyboard
+++ b/DormitoryForDelivery/DormitoryForDelivery/Base.lproj/Main.storyboard
@@ -271,76 +271,111 @@
             </objects>
             <point key="canvasLocation" x="812" y="809"/>
         </scene>
-        <!--View Controller-->
+        <!--Log In View Controller-->
         <scene sceneID="xbh-uJ-giS">
             <objects>
-                <viewController id="gzs-Ha-SKa" sceneMemberID="viewController">
+                <viewController id="gzs-Ha-SKa" customClass="LogInViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="7oN-uj-wBT">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="배달의 기숙사" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zdm-K8-kmB">
-                                <rect key="frame" x="99" y="194" width="216" height="118"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="ID" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ig3-Gt-HEK">
-                                <rect key="frame" x="80" y="347" width="254" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hat-Vu-gwb">
-                                <rect key="frame" x="80" y="406" width="254" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Smo-yC-z0c">
-                                <rect key="frame" x="107" y="490" width="200" height="50"/>
-                                <color key="backgroundColor" name="AccentColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="2kO-am-leF"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="QcH-bp-N4i"/>
-                                </constraints>
-                                <state key="normal" title="로그인">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                            </button>
-                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" spacing="60" translatesAutoresizingMaskIntoConstraints="NO" id="es2-L8-EUV">
-                                <rect key="frame" x="100" y="580" width="219" height="30"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="7qd-uO-hjT">
+                                <rect key="frame" x="50" y="223" width="314" height="330"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="muW-2Z-DmQ">
-                                        <rect key="frame" x="0.0" y="0.0" width="58" height="30"/>
-                                        <state key="normal" title="회원가입">
-                                            <color key="titleColor" red="0.57414853570000002" green="0.57416242360000003" blue="0.57415497299999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="배달의 기숙사" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zdm-K8-kmB">
+                                        <rect key="frame" x="0.0" y="0.0" width="314" height="48"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Alert" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6qf-lo-fJO">
+                                        <rect key="frame" x="0.0" y="58" width="314" height="16"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                        <color key="textColor" systemColor="systemRedColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ig3-Gt-HEK">
+                                        <rect key="frame" x="0.0" y="84" width="314" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="e17-Pn-dd1"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hat-Vu-gwb">
+                                        <rect key="frame" x="0.0" y="144" width="314" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="8DB-f6-M0w"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Smo-yC-z0c">
+                                        <rect key="frame" x="0.0" y="204" width="314" height="50"/>
+                                        <color key="backgroundColor" name="AccentColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="2kO-am-leF"/>
+                                        </constraints>
+                                        <state key="normal" title="로그인">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V2S-2B-UkZ">
-                                        <rect key="frame" x="118" y="0.0" width="101" height="30"/>
-                                        <state key="normal" title="ID/비밀번호 찾기">
-                                            <color key="titleColor" red="0.66422420739999999" green="0.66424006219999998" blue="0.66423153879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        </state>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="es2-L8-EUV">
+                                        <rect key="frame" x="0.0" y="264" width="314" height="28"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="muW-2Z-DmQ">
+                                                <rect key="frame" x="0.0" y="0.0" width="65" height="28"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                <state key="normal" title="회원가입">
+                                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                            </button>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="|" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VR8-bc-mA0">
+                                                <rect key="frame" x="73" y="0.0" width="5.5" height="28"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V2S-2B-UkZ">
+                                                <rect key="frame" x="86.5" y="0.0" width="127" height="28"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                <state key="normal" title="ID/비밀번호 찾기">
+                                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                            </button>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="|" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kpm-Nm-Y01">
+                                                <rect key="frame" x="221.5" y="0.0" width="5.5" height="28"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7nN-5j-xKU">
+                                                <rect key="frame" x="235" y="0.0" width="79" height="28"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                <state key="normal" title="둘러보기">
+                                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YWV-pV-qqF">
+                                        <rect key="frame" x="0.0" y="302" width="314" height="28"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                        <state key="normal" title="MORE"/>
                                     </button>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstItem="Smo-yC-z0c" firstAttribute="height" secondItem="Hat-Vu-gwb" secondAttribute="height" id="VuN-17-hPo"/>
+                                    <constraint firstItem="Hat-Vu-gwb" firstAttribute="height" secondItem="ig3-Gt-HEK" secondAttribute="height" id="mAG-XZ-a4O"/>
+                                </constraints>
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="hiy-ho-d2t"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="Smo-yC-z0c" firstAttribute="centerX" secondItem="7oN-uj-wBT" secondAttribute="centerX" id="0eU-Zl-IgD"/>
-                            <constraint firstItem="Hat-Vu-gwb" firstAttribute="top" secondItem="ig3-Gt-HEK" secondAttribute="bottom" constant="25" id="24T-Pb-fdt"/>
-                            <constraint firstItem="Hat-Vu-gwb" firstAttribute="leading" secondItem="hiy-ho-d2t" secondAttribute="leading" constant="80" id="2ng-76-VvS"/>
-                            <constraint firstItem="ig3-Gt-HEK" firstAttribute="top" secondItem="Zdm-K8-kmB" secondAttribute="bottom" constant="35" id="3kk-Nd-dwf"/>
-                            <constraint firstItem="es2-L8-EUV" firstAttribute="leading" secondItem="hiy-ho-d2t" secondAttribute="leading" constant="100" id="8FW-pD-u5w"/>
-                            <constraint firstItem="hiy-ho-d2t" firstAttribute="trailing" secondItem="es2-L8-EUV" secondAttribute="trailing" constant="100" id="D4w-Rl-5PP"/>
-                            <constraint firstItem="ig3-Gt-HEK" firstAttribute="leading" secondItem="hiy-ho-d2t" secondAttribute="leading" constant="80" id="G4o-LY-42N"/>
-                            <constraint firstItem="hiy-ho-d2t" firstAttribute="trailing" secondItem="ig3-Gt-HEK" secondAttribute="trailing" constant="80" id="Kyq-Gc-MLN"/>
-                            <constraint firstItem="hiy-ho-d2t" firstAttribute="trailing" secondItem="Hat-Vu-gwb" secondAttribute="trailing" constant="80" id="Mtn-bs-d9W"/>
-                            <constraint firstItem="Zdm-K8-kmB" firstAttribute="centerX" secondItem="7oN-uj-wBT" secondAttribute="centerX" id="ask-cF-EWl"/>
-                            <constraint firstItem="hiy-ho-d2t" firstAttribute="trailing" secondItem="es2-L8-EUV" secondAttribute="trailing" constant="95" id="b1D-gc-jaT"/>
-                            <constraint firstItem="Smo-yC-z0c" firstAttribute="top" secondItem="Hat-Vu-gwb" secondAttribute="bottom" constant="50" id="etC-uh-qu1"/>
-                            <constraint firstItem="hiy-ho-d2t" firstAttribute="bottom" secondItem="Zdm-K8-kmB" secondAttribute="bottom" constant="550" id="gX7-4F-Lic"/>
-                            <constraint firstItem="Zdm-K8-kmB" firstAttribute="top" secondItem="hiy-ho-d2t" secondAttribute="top" constant="150" id="gfF-kQ-A7i"/>
+                            <constraint firstItem="7qd-uO-hjT" firstAttribute="centerY" secondItem="7oN-uj-wBT" secondAttribute="centerY" constant="-60" id="2m0-oT-JMZ"/>
+                            <constraint firstItem="7qd-uO-hjT" firstAttribute="leading" secondItem="hiy-ho-d2t" secondAttribute="leading" constant="50" id="mEJ-ZA-56H"/>
+                            <constraint firstItem="hiy-ho-d2t" firstAttribute="trailing" secondItem="7qd-uO-hjT" secondAttribute="trailing" constant="50" id="txv-Y5-K0e"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -543,6 +578,9 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
