--- a/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/Base.lproj/Main.storyboard
+++ b/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/Base.lproj/Main.storyboard
@@ -222,7 +222,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="BqH-Hu-8TP">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="rGN-zt-Ql9" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="MainTableViewController" automaticallyAdjustsScrollViewInsets="NO" id="rGN-zt-Ql9" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="HSZ-mS-cWc">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
